--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </a>
           </li>
         </ul>
-        
+
         <h2 class="hidden">ARTICLES</h2>
         <div class="clearfix">
           <a href ="#" class="article-box">
@@ -74,9 +74,80 @@
           </a>
         </div>
       </main>
+
       <div class="sidemenu">
+        <h2 class="heading">RANKING</h2>
+        <ol class="ranking">
+          <li class="ranking-item">
+            <a href="#">
+              <img class="image" src="./images/ranking.jpg" alt="グラフの画像">
+              <span class="order"></span>
+              <p class="text">HTML/CSSコーディングと切っても切れないWebブラウザのシェア動向をチェックしよう</p>
+            </a>
+          </li>
+          <li class="ranking-item">
+            <a href="#">
+              <img class="image" src="./images/ranking.jpg" alt="グラフの画像">
+              <span class="order"></span>
+              <p class="text">HTML/CSSコーディングと切っても切れないWebブラウザのシェア動向をチェックしよう</p>
+            </a>
+          </li>
+          <li class="ranking-item">
+            <a href="#">
+              <img class="image" src="./images/ranking.jpg" alt="グラフの画像">
+              <span class="order"></span>
+              <p class="text">HTML/CSSコーディングと切っても切れないWebブラウザのシェア動向をチェックしよう</p>
+            </a>
+          </li>
+        </ol>
+
+        <h2 class="heading">DOCUMENTS</h2>
+        <ul class="documents">
+          <li>
+            <h3 class="title">HTML5</h3>
+            <ul>
+              <li><a href ="#">追加された要素</a></li>
+              <li><a href ="#">削除された要素</a></li>
+              <li><a href ="#">意味が変わった要素</a></li>
+              <li><a href ="#">HTML5のコンテンツモデル</a></li>
+            </ul>
+          </li>
+          <li>
+            <h3 class="title">CSS3</h3>
+            <ul>
+              <li><a href ="#">追加されたプロバディ</a></li>
+              <li><a href ="#">追加されたセレクタ</a></a></li>
+              <li><a href ="#">追加された単位</a></li>
+            </ul>
+          </li>
+          <li>
+            <h3 class="title">JavaSqript</h3>
+            <ul>
+              <li><a href ="#">JavaSqriptの言語仕様</a></li>
+              <li><a href ="#">EOMASqriptとは？</a></li>
+              <li><a href ="#">jQueryとは？</a></li>
+            </ul>
+          </li>
+          <li>
+            <h3 class="title">Sass, Less, Stylus</h3>
+            <p>準備中</p>
+          </li>
+          <li>
+            <h3 class="title">TypeSqript</h3>
+            <p>準備中</p>
+          </li>
+        </ul>
+        <h2 class="hidden">SEARCH</h2>
+        <form class="search-box">
+          <input class="search-input" type="text" name="search" placeholder="SEARCH">
+          <input class="search-button" type="submit" value="検索">
+          <p class="text">
+            サイト内の文章を検索できます。
+          </p>
+        </form>
       </div>
     </div>
+
     <footer class="footer">
     </footer>
   </body>
